update config swagger and mongodb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,89 @@
-spring.application.name=spring-boot
+# =====================================================
+# THONG TIN UNG DUNG
+# =====================================================
+spring.application.name=spring-boot-mongodb-thymeleaf
+server.port=8080
+
+# =====================================================
+# CAU HINH KET NOI MONGODB
+# =====================================================
+# Neu em chay MongoDB local
+spring.data.mongodb.uri=mongodb+srv://root:123456%40@cluster0.aocwl84.mongodb.net/phonehub?retryWrites=true&w=majority&appName=Cluster0
+# Giải thích:
+# - 123456@ phải được encode thành 123456%40 (vì ký tự @ gây lỗi URI)
+# - /phonehub là tên database
+
+
+# Neu co user/password thi doi thanh:
+# spring.data.mongodb.uri=mongodb://ten_user:mat_khau@localhost:27017/ten_database_cua_em
+
+# =====================================================
+# CAU HINH THYMELEAF (hien thi HTML, ho tro tieng Viet)
+# =====================================================
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=false
+# =====================================================
+# CAU HINH NGON NGU & BO KY TU (DE HIEN THI TIENG VIET)
+# =====================================================
+spring.web.locale=vi_VN
+spring.web.locale-resolver=fixed
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
+# Deprecated properties removed - using server.servlet.encoding.* instead
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+# =====================================================
+# LOGGING (ghi log chi tiet de debug)
+# =====================================================
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.data.mongodb.core=INFO
+logging.level.com.example=DEBUG
+
+# =====================================================
+# CAC CAU HINH KHAC
+# =====================================================
+spring.main.allow-bean-definition-overriding=true
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+
+# =====================================================
+# CAU HINH HEALTH CHECK & MONITORING
+# =====================================================
+# Bật health check endpoint
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.health.mongo.enabled=true
+
+# Cấu hình info endpoint
+info.app.name=Spring Boot MongoDB Shop
+info.app.description=Ứng dụng shop sử dụng Spring Boot + MongoDB + Thymeleaf
+info.app.version=1.0.0
+
+# =====================================================
+# CAU HINH SWAGGER/OPENAPI
+# =====================================================
+# Swagger UI - Cấu hình cơ bản
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/api-docs
+
+# Swagger UI Customization
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.displayRequestDuration=true
+
+# Grouping
+springdoc.group-configs[0].group=all
+springdoc.group-configs[0].paths-to-match=/**
+
+# Packages to scan
+springdoc.packages-to-scan=com.example.spring_boot.controllers
