update overview product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,10 @@ spring.data.mongodb.uri=mongodb+srv://root:123456%40@cluster0.aocwl84.mongodb.ne
 # CAU HINH THYMELEAF (hien thi HTML, ho tro tieng Viet)
 # =====================================================
 spring.thymeleaf.enabled=true
-spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.prefix=classpath:/views/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.mode=HTML
+spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 # =====================================================
 # CAU HINH NGON NGU & BO KY TU (DE HIEN THI TIENG VIET)
