--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ server.port=8080
 # =====================================================
 # Neu em chay MongoDB local
 spring.data.mongodb.uri=mongodb+srv://root:123456%40@cluster0.aocwl84.mongodb.net/phonehub?retryWrites=true&w=majority&appName=Cluster0
+
 # Giải thích:
 # - 123456@ phải được encode thành 123456%40 (vì ký tự @ gây lỗi URI)
 # - /phonehub là tên database
@@ -87,3 +88,4 @@ springdoc.group-configs[0].paths-to-match=/**
 
 # Packages to scan
 springdoc.packages-to-scan=com.example.spring_boot.controllers
+spring.data.mongodb.auto-index-creation=true
