update products services: try/catch + logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,81 +1,94 @@
 # =====================================================
-# THONG TIN UNG DUNG
+# THÔNG TIN ỨNG DỤNG
 # =====================================================
+# Tên ứng dụng
 spring.application.name=spring-boot-mongodb-thymeleaf
+# Cổng chạy server
 server.port=8080
 
 # =====================================================
-# CAU HINH KET NOI MONGODB
+# CẤU HÌNH KẾT NỐI MONGODB
 # =====================================================
-# Neu em chay MongoDB local
+## Kết nối MongoDB Atlas
 spring.data.mongodb.uri=mongodb+srv://root:123456%40@cluster0.aocwl84.mongodb.net/phonehub?retryWrites=true&w=majority&appName=Cluster0
-
 # Giải thích:
-# - 123456@ phải được encode thành 123456%40 (vì ký tự @ gây lỗi URI)
-# - /phonehub là tên database
+#  - 123456@ phải encode thành 123456%40 (vì ký tự @ gây lỗi URI)
+#  - /phonehub là tên database
+#  - retryWrites=true: tự động retry nếu write thất bại
+#  - w=majority: majority write acknowledgment
+#  - appName=Cluster0: tên ứng dụng khi connect MongoDB
 
-
-# Neu co user/password thi doi thanh:
+# Nếu dùng Mongo local với user/password
 # spring.data.mongodb.uri=mongodb://ten_user:mat_khau@localhost:27017/ten_database_cua_em
 
+# Tự động tạo index dựa trên annotation @Indexed
+spring.data.mongodb.auto-index-creation=true
+
 # =====================================================
-# CAU HINH THYMELEAF (hien thi HTML, ho tro tieng Viet)
+# CẤU HÌNH THYMELEAF
 # =====================================================
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/views/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.mode=LEGACYHTML5
+# Chế độ xử lý HTML (LEGACYHTML5 không còn hỗ trợ)
+spring.thymeleaf.mode=HTML
+# Tắt cache khi dev
 spring.thymeleaf.cache=false
+
 # =====================================================
-# CAU HINH NGON NGU & BO KY TU (DE HIEN THI TIENG VIET)
+# CẤU HÌNH NGÔN NGỮ & BỘ KÝ TỰ
 # =====================================================
+# Ngôn ngữ mặc định và cố định theo cấu hình
 spring.web.locale=vi_VN
 spring.web.locale-resolver=fixed
+# File message.properties cho i18n
 spring.messages.basename=messages
+# Encoding cho message
 spring.messages.encoding=UTF-8
-# Deprecated properties removed - using server.servlet.encoding.* instead
+# Charset mặc định cho servlet
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
 # =====================================================
-# LOGGING (ghi log chi tiet de debug)
+# LOGGING (ghi log chi tiết)
 # =====================================================
 logging.level.org.springframework.web=INFO
 logging.level.org.springframework.data.mongodb.core=INFO
 logging.level.com.example=DEBUG
 
 # =====================================================
-# CAC CAU HINH KHAC
+# CÁC CẤU HÌNH KHÁC
 # =====================================================
 spring.main.allow-bean-definition-overriding=true
+# Auto restart khi code thay đổi
 spring.devtools.restart.enabled=true
+# Live reload trình duyệt
 spring.devtools.livereload.enabled=true
 
 # =====================================================
-# CAU HINH HEALTH CHECK & MONITORING
+# HEALTH CHECK & MONITORING
 # =====================================================
-# Bật health check endpoint
 management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=always
+# Hiển thị chi tiết health
+management.endpoint.health.show-details=ALWAYS
+# Kiểm tra MongoDB health
 management.health.mongo.enabled=true
 
-# Cấu hình info endpoint
 info.app.name=Spring Boot MongoDB Shop
 info.app.description=Ứng dụng shop sử dụng Spring Boot + MongoDB + Thymeleaf
 info.app.version=1.0.0
 
 # =====================================================
-# CAU HINH SWAGGER/OPENAPI
+# SWAGGER / OPENAPI
 # =====================================================
-# Swagger UI - Cấu hình cơ bản
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/api-docs
 
-# Swagger UI Customization
+# Swagger UI customization
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
@@ -88,4 +101,25 @@ springdoc.group-configs[0].paths-to-match=/**
 
 # Packages to scan
 springdoc.packages-to-scan=com.example.spring_boot.controllers
-spring.data.mongodb.auto-index-creation=true
+
+# =====================================================
+# MULTIPART FILE UPLOAD
+# =====================================================
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Thư mục lưu file upload (bind với UploadProperties.prefix=app.upload)
+app.upload.dir=src/main/resources/static/uploads
+
+# =====================================================
+# CLOUDINARY (đọc từ biến môi trường, không commit secret)
+# =====================================================
+# PowerShell (Windows) đặt biến môi trường trước khi chạy app:
+#   $Env:APP_CLOUDINARY_CLOUD_NAME="your_cloud"
+#   $Env:APP_CLOUDINARY_API_KEY="your_key"
+#   $Env:APP_CLOUDINARY_API_SECRET="your_secret"
+# (Không khai báo custom properties để tránh cảnh báo linter)
+# app.cloudinary.cloud-name=${APP_CLOUDINARY_CLOUD_NAME:}
+# app.cloudinary.api-key=${APP_CLOUDINARY_API_KEY:}
+# app.cloudinary.api-secret=${APP_CLOUDINARY_API_SECRET:}
