--- a/pom.xml
+++ b/pom.xml
@@ -29,75 +29,106 @@
     <java.version>17</java.version>
   </properties>
   <dependencies>
-
-    <!-- Web (REST API, Controller, ... ) -->
+    <!-- Web: REST API, Controllers -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
-    <!-- Thymeleaf (render giao diện HTML trên server) -->
+    <!-- Thymeleaf: render HTML trên server -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
 
-    <!-- MongoDB (NoSQL Database) -->
+    <!-- MongoDB: kết nối NoSQL database -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-mongodb</artifactId>
     </dependency>
 
-    <!-- Validation (dùng @Valid, @NotNull, @Email, ...) -->
+    <!-- Validation: @Valid, @NotNull, @Email... -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
 
-    <!-- Lombok (tự sinh getter/setter, constructor, builder, ...) -->
+    <!-- Lombok: tự sinh getter/setter, constructor, builder -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
     </dependency>
 
-    <!-- DevTools (tự reload khi thay đổi code) -->
+    <!-- DevTools: tự reload khi thay đổi code -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <scope>runtime</scope>
     </dependency>
 
-    <!-- Test (JUnit, MockMvc, Spring Test, ...) -->
+    <!-- Test: JUnit, MockMvc, Spring Test -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
-    <!-- Hỗ trợ IntelliSense cho application.properties -->
+
+    <!-- IntelliSense cho application.properties -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-configuration-processor</artifactId>
       <optional>true</optional>
     </dependency>
 
-    <!-- Spring Boot Actuator (health check, metrics, monitoring) -->
+    <!-- Actuator: health check, metrics -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
 
-    <!-- Swagger/OpenAPI Documentation -->
+    <!-- Swagger/OpenAPI: tài liệu API -->
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
       <version>2.2.0</version>
     </dependency>
 
+    <!-- NekoHTML: xử lý HTML legacy -->
     <dependency>
       <groupId>net.sourceforge.nekohtml</groupId>
       <artifactId>nekohtml</artifactId>
     </dependency>
+
+    <!-- Apache Commons FileUpload: upload file -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
+    <!-- Cloudinary HTTP SDK: upload, quản lý hình ảnh/video -->
+    <dependency>
+      <groupId>com.cloudinary</groupId>
+      <artifactId>cloudinary-http5</artifactId>
+      <version>2.0.0</version>
+    </dependency>
+
+    <!-- Cloudinary Taglib: hiển thị ảnh/video trong JSP/HTML -->
+    <dependency>
+      <groupId>com.cloudinary</groupId>
+      <artifactId>cloudinary-taglib</artifactId>
+      <version>2.0.0</version>
+    </dependency>
+
+    <!-- dotenv-java: load biến môi trường từ file .env -->
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>2.2.4</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
