update ui sidebar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.data.mongodb.uri=mongodb+srv://root:123456%40@cluster0.aocwl84.mongodb.ne
 
 # Tự động tạo index dựa trên annotation @Indexed
 spring.data.mongodb.auto-index-creation=true
+# Tối ưu Connection Pool
 
 # =====================================================
 # CẤU HÌNH THYMELEAF
